--- a/web/about.html
+++ b/web/about.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hakkında | Dostlar Konağı FS25</title>
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <style>
         body::before {
@@ -26,8 +27,7 @@
     </style>
 </head>
 
-<body class="bg-gray-950 text-gray-100 font-sans min-h-screen relative"
-    style="background-image: url('./assets/fs-25-background.png'); background-size: cover; background-position: center; background-attachment: fixed;">
+<body class="bg-gray-950 text-gray-100 font-sans min-h-screen relative">
     <nav class="flex flex-wrap justify-center gap-3 py-6 mb-8 bg-gray-900/80 rounded-b-xl shadow">
         <a href="home.html" class="px-4 py-2 rounded font-medium text-gray-200 hover:bg-gray-800">Anasayfa</a>
         <a href="mods.html" class="px-4 py-2 rounded font-medium text-gray-200 hover:bg-gray-800">Sunucu & Modlar</a>
@@ -45,18 +45,22 @@
         </div>
         <div class="bg-gray-900 rounded-xl shadow p-6 mb-8">
             <h3 class="text-lg font-semibold text-blue-300 mb-2">Dostlar Discord Botu</h3>
-            <p class="text-gray-200 mb-2">Dostlar Discord Botu, Dostlar Konağı FS25 topluluğu için özel olarak geliştirilmiş bir Discord botudur. Temel işlevleri:</p>
+            <p class="text-gray-200 mb-2">Dostlar Discord Botu, Dostlar Konağı FS25 topluluğu için özel olarak
+                geliştirilmiş bir Discord botudur. Temel işlevleri:</p>
             <ul class="list-disc list-inside text-gray-300 mb-2">
                 <li>Sunucu ve mod yönetimi</li>
                 <li>Otomatik galeri güncelleme ve resim ekleme</li>
                 <li>Topluluk etkileşimi ve moderasyon kolaylığı</li>
                 <li>FS25 oyun sunucusu ile entegrasyon</li>
             </ul>
-            <p class="text-gray-400 text-sm">Bot, Discord üzerinden yapılan işlemleri otomatik olarak web sitesine yansıtarak topluluğun güncel ve dinamik kalmasını sağlar.</p>
+            <p class="text-gray-400 text-sm">Bot, Discord üzerinden yapılan işlemleri otomatik olarak web sitesine
+                yansıtarak topluluğun güncel ve dinamik kalmasını sağlar.</p>
         </div>
         <div class="bg-gray-900 rounded-xl shadow p-6 mb-8">
             <h3 class="text-lg font-semibold text-blue-300 mb-2">Web Sitesinin Amacı</h3>
-            <p class="text-gray-200">Bu site, Dostlar Konağı FS25 topluluğu için merkezi bir bilgi, paylaşım ve etkileşim platformu sunar. Sunucu durumu, modlar, galeri ve kurallar gibi tüm güncel bilgiler burada kolayca erişilebilir. Topluluğun bir arada, şeffaf ve aktif kalmasını sağlamak ana hedeftir.</p>
+            <p class="text-gray-200">Bu site, Dostlar Konağı FS25 topluluğu için merkezi bir bilgi, paylaşım ve
+                etkileşim platformu sunar. Sunucu durumu, modlar, galeri ve kurallar gibi tüm güncel bilgiler burada
+                kolayca erişilebilir. Topluluğun bir arada, şeffaf ve aktif kalmasını sağlamak ana hedeftir.</p>
         </div>
     </main>
     <footer class="text-center text-xs text-gray-500 py-6 mt-8">
