--- a/web/home.html
+++ b/web/home.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anasayfa | Dostlar Konağı FS25</title>
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <style>
         body::before {
@@ -26,8 +27,7 @@
     </style>
 </head>
 
-<body class="bg-gray-950 text-gray-100 font-sans min-h-screen relative"
-    style="background-image: url('./assets/fs-25-background.png'); background-size: cover; background-position: center; background-attachment: fixed;">
+<body class="bg-gray-950 text-gray-100 font-sans min-h-screen relative">
     <nav class="flex flex-wrap justify-center gap-3 py-6 mb-8 bg-gray-900/80 rounded-b-xl shadow">
         <a href="home.html" class="px-4 py-2 rounded font-medium text-blue-400 bg-gray-800">Anasayfa</a>
         <a href="mods.html" class="px-4 py-2 rounded font-medium text-gray-200 hover:bg-gray-800">Sunucu & Modlar</a>
@@ -37,9 +37,11 @@
     </nav>
     <main class="max-w-xl mx-auto px-4">
         <div class="flex flex-col items-center mb-8">
-            <img src="./assets/letter-d.png" alt="FS25 Logo" class="w-20 h-20 mb-3">
-            <h1 class="text-2xl font-bold text-blue-400 text-center"><Fieldset:d>DOSTLAR KONAĞI</Fieldset:d><br><span
-                    class="block text-lg text-gray-300 font-normal">Farming Simulator 2025</span></h1>
+            <img src="./assets/dostlar-logo.png" alt="FS25 Logo" class="w-20 h-20 mb-3">
+            <h1 class="text-2xl font-bold text-blue-400 text-center">
+                <Fieldset:d>DOSTLAR KONAĞI</Fieldset:d><br><span class="block text-lg text-gray-300 font-normal">Farming
+                    Simulator 2025</span>
+            </h1>
         </div>
         <div class="bg-gray-900 rounded-xl shadow p-6 mb-6">
             <p class="font-semibold text-lg mb-2">Hoş geldin!</p>
@@ -57,7 +59,8 @@
             <a href="https://discord.gg/yQ7XNK6RyN" target="_blank"
                 class="inline-block px-6 py-3 bg-blue-500 text-white font-semibold rounded shadow hover:bg-blue-600 transition mb-2">Discord'a
                 Katıl</a>
-            <div class="text-gray-300 text-sm">Her türlü soru ve destek için Discord sunucumuza bekleriz.<br>Geliştirici:
+            <div class="text-gray-300 text-sm">Her türlü soru ve destek için Discord sunucumuza
+                bekleriz.<br>Geliştirici:
                 <b>poncikpanda</b>
             </div>
         </div>
