--- a/web/index.html
+++ b/web/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0; url=home.html">
     <title>Dostlar Konağı FS25 | Yönlendiriliyor...</title>
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
