footer bug text fixed

--- a/web/mods.html
+++ b/web/mods.html
@@ -71,7 +71,7 @@
         </section>
     </main>
     <footer class="text-center text-xs text-gray-500 py-6 mt-8">
-        Farming Simulator 2025 © | Dostlar Konağı mod koleksiyonu<br>
+        Farming Simulator 2025 © | Dostlar Konağı<br>
         İletişim: <b>poncikpanda</b> (Discord)
     </footer>
     <script>
